--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </header>
             <section class="description">
                 <div id="container" class="image"></div>
-                <div style="text-align: center; padding-top: 1em">右键另存为就可以啦！</div>
+                <div style="text-align: center; padding-top: 1em"><button id="dl-btn">保存图片</button></div>
             </section>
         </div>
         <!-- https://github.com/tholman/github-corners -->
