--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <section class="description">
                 <div id="container" class="image"></div>
                 <div style="text-align: center; padding-top: 1em">
-                    <button id="dl-btn" class="action-btn">保存图片</button>
+                    <button id="dl-btn" class="action-btn">保存</button>
+                    <button id="share-btn" class="action-btn" style="display: none;">分享</button>
                 </div>
             </section>
         </div>
